--- a/GraphQLProject/appsettings.json
+++ b/GraphQLProject/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Connection": "Server=.;Database=RestaurantDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  }
+
 }
